--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,19 @@
 <resources>
     <string name="app_name">UniSport</string>
+    <string name="login">Вход</string>
+    <string name="phone_number">Номер телефона</string>
+    <string name="password">Пароль</string>
+    <string name="no_account_question">Нет аккаунта?</string>
+    <string name="registration">Регистрация</string>
+    <string name="continue_next">Далее</string>
+    <string name="onboarding_title_1">Спортивные кружки для детей</string>
+    <string name="onboarding_title_2">Открытые чемпионаты</string>
+    <string name="onboarding_title_3">Спортивные площадки</string>
+    <string name="onboarding_title_4">Спортивные события</string>
+    <string name="onboarding_description_1">Делаем спорт доступнее для детей города Екатеринбург</string>
+    <string name="onboarding_description_2">Участвуйте в соревнованиях по любимому виду спорта</string>
+    <string name="onboarding_description_3">Подскажем ближайшие места для занятия спортом вместе с близкими</string>
+    <string name="onboarding_description_4">Регистрируйтесь на спортивные события в вашем городе</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
