--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_registration_password">Придумайте пароль</string>
     <string name="hint_registration_password">Пароль</string>
     <string name="title_registration_role">Расскажите нам, кто вы</string>
+    <string name="text_error_login">Неправильная почта или пароль</string>
 </resources>
