--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="text_events">События</string>
     <string name="text_profile">Профиль</string>
     <string name="text_hint_section_search">Секция, мероприятие</string>
+    <string name="text_hint_map_search">Площадка, место, парк</string>
     <string name="text_more_detailed">Подробнее</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_sports_ground">Спортплощадка</string>
+    <string name="text_sports_review">Обзор</string>
 </resources>
