add ui recommend

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="text_information">Информация</string>
     <string name="text_address">Адрес</string>
     <string name="text_contacts">Контакты</string>
+    <string name="text_teachers">Преподаватели</string>
+    <string name="text_to_enroll">Записаться</string>
 </resources>
